--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-This repo contains a patch for the ralink kernel module. The patch corrects warnings when compiling the module for ARM processors.
+Intro
+=====
+
+This repo contains a patch for the ralink rt2501 kernel module. The patch corrects warnings when compiling the module for ARM processors.
+
+``Please note that this has not been fully tested.``
